Fix all ESLint warnings and add Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,9 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
+      "use": "@vercel/node",
       "config": {
-        "distDir": "build"
+        "buildCommand": "CI=false react-scripts build"
       }
     }
   ],
